@@ -11,6 +11,7 @@
 - added a new global keyword `PLUGINS`
 - added `U.groupify(id, [count])` method for grouping identifiers
 - fixed data validation for the schema actions
+- added `DatabaseBuilder.alike(name, [comparer], value)`
 - added FlowStream events:
 	- `flowstream.on('connect', function(instance))`
 	- `flowstream.on('disconnect', function(instance))`
